data transform example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,10 @@
 <md-sidenav mode="side" class="app-sidenav">
   Sidenav
 </md-sidenav>
+
+<app-demo></app-demo>
+
+<br><br><br>
 <div class="app-content">
 
   <md-card>
