--- a/src/app/video-play/video-play.component.html
+++ b/src/app/video-play/video-play.component.html
@@ -1,3 +1,3 @@
-<div class="videoBox">
+<div class="videoBox" (click)="play()">
   <video controls autoplay width="320" height="240" id="video"></video>
 </div>
