--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,74 +1,13 @@
-md-sidenav-layout.m2app-dark {
-  background: black;
-}
-
-.app-content {
-  padding: 20px;
-}
-
-.app-content md-card {
-  margin: 20px;
-}
-
-.app-sidenav {
+nav {
+  /*max-width: 1200px;*/
+  margin: 0 auto;
+  background: #1976D2;
+  height: 36px;
+  min-height: 36px;
   padding: 10px;
-  min-width: 300px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.24);
 }
-
-.app-content md-checkbox {
-  margin: 10px;
-}
-
-.app-toolbar-filler {
-  flex: 1 1 auto;
-}
-
-.app-toolbar-menu {
-  padding: 0 14px 0 14px;
-  color: white;
-}
-
-.app-icon-button {
-  box-shadow: none;
-  user-select: none;
-  background: none;
-  border: none;
-  cursor: pointer;
-  filter: none;
-  font-weight: normal;
-  height: auto;
-  line-height: inherit;
-  margin: 0;
-  min-width: 0;
-  padding: 10px 0;
-  text-align: left;
-  text-decoration: none;
-  outline: none;
-}
-
-.app-action {
-  display: inline-block;
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-}
-
-.app-spinner {
-  height: 30px;
-  width: 30px;
-  display: inline-block;
-}
-
-.app-input-icon {
-  font-size: 16px;
-}
-
-.app-list {
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  width: 350px;
-  margin: 20px;
-}
-
-.app-progress {
-  margin: 20px;
+nav a {
+  color: #ffffff;
+  font-weight: 300;
 }
