--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <nav>
-  <a routerLink="/home" md-button routerLinkActive="active">Home</a>
-  <a routerLink="/play" md-button routerLinkActive="active">Video Play</a>
+  <div class="example-center">
+    <a routerLink="/home" md-button routerLinkActive="active">Home</a>
+    <a routerLink="/play" md-button routerLinkActive="active">Video Play</a>
+  </div>
 </nav>
 <router-outlet></router-outlet>
