--- a/src/app/routers/page-home/page-home.component.html
+++ b/src/app/routers/page-home/page-home.component.html
@@ -1,19 +1,23 @@
-<md-card class="example-card">
-  <md-card-header>
-    <div md-card-avatar class="example-header-image"></div>
-    <md-card-title>Shiba Inu</md-card-title>
-    <md-card-subtitle>Dog Breed</md-card-subtitle>
-  </md-card-header>
-  <img md-card-image src="//material.angular.io/assets/img/examples/shiba2.jpg">
-  <md-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
-    </p>
-  </md-card-content>
-  <md-card-actions>
-    <a routerLink="/blog/detail" md-button>Read More</a>
-    <button md-button>SHARE</button>
-  </md-card-actions>
-</md-card>
+<div md-grid-list cols="4" class="example-grid">
+  <div *ngFor="let tile of tiles" class="example-tile">
+    <md-card class="example-card">
+      <md-card-header>
+        <div md-card-avatar class="example-header-image"></div>
+        <md-card-title>Shiba Inu</md-card-title>
+        <md-card-subtitle>Dog Breed</md-card-subtitle>
+      </md-card-header>
+      <img md-card-image src="//material.angular.io/assets/img/examples/shiba2.jpg">
+      <md-card-content>
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+          bred for hunting.
+        </p>
+      </md-card-content>
+      <md-card-actions>
+        <a routerLink="/blog/detail" md-button>Read More</a>
+        <button md-button>SHARE</button>
+      </md-card-actions>
+    </md-card>
+  </div>
+</div>
